--- a/models/inputs.yaml
+++ b/models/inputs.yaml
@@ -40,7 +40,7 @@ inputs:
         entity: user
   - name: rsMarketingProductViewed
     app_defaults:
-      table: MARKETING_WEBSITE.PRODUCT_VIEWED
+      table: TAM_SHREYA_DEMO.MARKETING_WEBSITE.PRODUCT_VIEWED
     occurred_at_col: timestamp
     ids:
       - select: anonymous_id
@@ -48,7 +48,7 @@ inputs:
         entity: user  
   - name: rsMarketingAddedToCart
     app_defaults:
-      table: MARKETING_WEBSITE.ADDED_TO_CART
+      table: TAM_SHREYA_DEMO.MARKETING_WEBSITE.ADDED_TO_CART
     occurred_at_col: timestamp
     ids:
       - select: anonymous_id
@@ -56,7 +56,7 @@ inputs:
         entity: user
   - name: rsMarketingFormSubmit
     app_defaults:
-      table: MARKETING_WEBSITE.FORM_SUBMIT
+      table: TAM_SHREYA_DEMO.MARKETING_WEBSITE.FORM_SUBMIT
     occurred_at_col: timestamp
     ids:
       - select: anonymous_id
@@ -65,11 +65,3 @@ inputs:
       - select: lower(USER_ID) #good to add lower() since the user_id here is an email 
         type: email
         entity: user  
-  - name: rsMarketingProductViewed
-    app_defaults:
-      table: MARKETING_WEBSITE.PRODUCT_VIEWED
-    occurred_at_col: timestamp
-    ids:
-      - select: anonymous_id
-        type: anonymous_id
-        entity: user
