--- a/models/profiles.yaml
+++ b/models/profiles.yaml
@@ -49,7 +49,7 @@ models:
             where: timestamp >= '2024-01-01' 
         - entity_var:
             name: website_days_since_last_activity
-            select: datediff(day, timestamp, current_timestamp)
+            select: any_value(datediff(day, timestamp, current_timestamp))
             from: inputs/rsMarketingTracks        
 
       features:
